--- a/views/deconnexion.html.twig
+++ b/views/deconnexion.html.twig
@@ -7,5 +7,5 @@
 {% endblock %}
 {% block content %}
 	<p>Vous vous êtes bien déconnecté ...</p>
-	<p>Veuillez cliquer <a href="/Projet_PHP/www/">ici</a> pour revenir à la page d'accueil</p>
+	<p>Veuillez cliquer <a href="/www/">ici</a> pour revenir à la page d'accueil</p>
 {% endblock %}
