--- a/views/profil.html.twig
+++ b/views/profil.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 {% block content %}
 	<main id="page">
-		<p><i>Vous êtes ici : </i><a href ="/Projet_PHP/www/">Index du forum</a>--->Profil</p>
+		<p><i>Vous êtes ici : </i><a href ="/www/">Index du forum</a>--->Profil</p>
 		<ul id="profil_list">
 			<li>
 			    <label>Nom membre:</label>
@@ -24,7 +24,7 @@
 			</li>
 			<li>
 				<label>Avatar :</label>
-				<p><img src="/Projet_PHP/www/images/avatars/{{membre_avatar}}" alt="avatar"></p><br>
+				<p><img src="/www/images/avatars/{{membre_avatar}}" alt="avatar"></p><br>
 			</li>
 			<li>
 				<label>Description :</label>
