--- a/views/register.html.twig
+++ b/views/register.html.twig
@@ -7,8 +7,8 @@
     <h1>Inscription</h1>
 {% endblock %}
 {% block content %}
-    <p><i>Vous êtes ici</i> : <a href="/Projet_PHP/www/">Index du forum</a> --> Enregistrement
-	<form method="post" enctype="multipart/form-data" action="/Projet_PHP/www/register/redirect">
+    <p><i>Vous êtes ici</i> : <a href="/www/">Index du forum</a> --> Enregistrement
+	<form method="post" enctype="multipart/form-data" action="/www/register/redirect">
 	   <fieldset><legend>Identifiants</legend>
             <label for="pseudo">* Pseudo :</label>  <input name="pseudo" type="text" id="pseudo" /> (le pseudo doit contenir entre 3 et 15 caractères)<br><br>
             <label for="password">* Mot de Passe :</label><input type="password" name="password" id="password"  /><br><br>
