--- a/views/register_confirmation.html.twig
+++ b/views/register_confirmation.html.twig
@@ -8,7 +8,7 @@
 		<div>
         	<h1>Inscription terminée</h1>
         	<p>Bienvenue {{pseudo}} vous êtes maintenant inscrit sur le forum</p>
-        	<p>Cliquez <a href="/Projet_PHP/www/">ici</a> pour revenir à la page d accueil</p>
+        	<p>Cliquez <a href="/www/">ici</a> pour revenir à la page d accueil</p>
         </div>
         {% else %}
         <div>
@@ -27,7 +27,7 @@
             <p>{{avatar_erreur2}}</p>
             <p>{{avatar_erreur3}}</p>
             <br></br>
-            <footer>Cliquez <a href="/Projet_PHP/www/register">ici</a> pour recommencer</footer>
+            <footer>Cliquez <a href="/www/register">ici</a> pour recommencer</footer>
             <br></br>
         </div>
         {% endif %}
